plugins {
    id 'java'
    id 'org.springframework.boot' version '3.4.5'
    id 'io.spring.dependency-management' version '1.1.7'
    id 'org.graalvm.buildtools.native' version '0.10.2'
}

group = 'cn.bincker'
version = '0.0.1-SNAPSHOT'

java {
    toolchain {
        languageVersion = JavaLanguageVersion.of(17)
    }
}

configurations {
    compileOnly {
        extendsFrom annotationProcessor
    }
}

repositories {
    mavenCentral()
}

dependencies {
    implementation 'org.springframework.boot:spring-boot-starter-security'
    implementation 'org.springframework.boot:spring-boot-starter-thymeleaf'
    implementation 'org.springframework.boot:spring-boot-starter-web'
    implementation 'org.springframework.boot:spring-boot-starter-validation'
    implementation 'org.thymeleaf.extras:thymeleaf-extras-springsecurity6'
    // Jackson YAML
    implementation 'com.fasterxml.jackson.dataformat:jackson-dataformat-yaml'
    //    mybatis
    implementation 'com.baomidou:mybatis-plus-spring-boot3-starter:3.5.11'
    //    markdown渲染
    implementation 'com.vladsch.flexmark:flexmark-all:0.64.8'
    //    农历工具
    implementation 'cn.6tail:lunar:1.7.2'
    //    双因素认证
    implementation 'com.warrenstrange:googleauth:1.5.0'
    runtimeOnly 'org.xerial:sqlite-jdbc:3.49.1.0'
    compileOnly 'org.projectlombok:lombok'
    developmentOnly 'org.springframework.boot:spring-boot-devtools'
    annotationProcessor 'org.projectlombok:lombok'
    testImplementation 'org.springframework.boot:spring-boot-starter-test'
    testImplementation 'com.baomidou:mybatis-plus-boot-starter-test:3.5.11'
    testImplementation 'org.springframework.security:spring-security-test'
    testRuntimeOnly 'org.junit.platform:junit-platform-launcher'
}

tasks.named('test') {
    useJUnitPlatform()
}
